@@ -23,6 +23,7 @@
  * \ingroup applications
  */
  
+#include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
 #include <curl/curl.h>
