@@ -25,6 +25,7 @@
  *	http://www.unixodbc.org
  */
 
+#include <stdio.h>
 #include <stdlib.h>
 #include <unistd.h>
 #include <string.h>
